--- a/examples/notebooks/multi_agent_quickstart.ipynb
+++ b/examples/notebooks/multi_agent_quickstart.ipynb
@@ -65,7 +65,7 @@
         "import openai\n",
         "from pydantic import create_model\n",
         "from rich.console import Console\n",
-        "from atomic_agents.agents.base_agent import BaseAgentIO, BaseAgent, BaseAgentConfig\n",
+        "from atomic_agents.agents.base_agent import BaseIOSchema, BaseAgent, BaseAgentConfig\n",
         "from atomic_agents.agents.tool_interface_agent import ToolInterfaceAgent, ToolInterfaceAgentConfig\n",
         "from atomic_agents.lib.tools.search.searx_tool import SearxNGSearchTool, SearxNGSearchToolConfig\n",
         "from atomic_agents.lib.tools.calculator_tool import CalculatorTool, CalculatorToolConfig"
@@ -141,7 +141,7 @@
       "outputs": [],
       "source": [
         "# Define a union response schema\n",
-        "UnionResponse = create_model('UnionResponse', __base__=BaseAgentIO, response=(Union[searx_agent.input_schema, calc_agent.input_schema], ...))"
+        "UnionResponse = create_model('UnionResponse', __base__=BaseIOSchema, response=(Union[searx_agent.input_schema, calc_agent.input_schema], ...))"
       ]
     },
     {
