--- a/examples/notebooks/what_is_atomic_agents.ipynb
+++ b/examples/notebooks/what_is_atomic_agents.ipynb
@@ -286,7 +286,7 @@
     "\n",
     "First off, as mentioned before, each tool and each agent has an **input schema** and an **output schema**.\n",
     "\n",
-    "These schemas all extend from what is called the `BaseAgentIO` class. This class itself is a Pydantic model with some predefined methods to facilitate storing a structured response in memory and to facilitate printing the response to the console using the `rich` library."
+    "These schemas all extend from what is called the `BaseIOSchema` class. This class itself is a Pydantic model with some predefined methods to facilitate storing a structured response in memory and to facilitate printing the response to the console using the `rich` library."
    ]
   },
   {
@@ -298,7 +298,7 @@
     "from pydantic import BaseModel, Field\n",
     "from rich.json import JSON\n",
     "\n",
-    "class BaseAgentIO(BaseModel):\n",
+    "class BaseIOSchema(BaseModel):\n",
     "    \"\"\"\n",
     "    Base class for input and output schemas for chat agents.\n",
     "    \"\"\"\n",
@@ -309,7 +309,7 @@
     "        json_str = self.model_dump_json()\n",
     "        return JSON(json_str)\n",
     "    \n",
-    "class BaseAgentInputSchema(BaseAgentIO):\n",
+    "class BaseAgentInputSchema(BaseIOSchema):\n",
     "    chat_message: str = Field(\n",
     "        ...,\n",
     "        description='The chat message exchanged between the user and the chat agent. '\n",
@@ -324,7 +324,7 @@
     "            \"description\": description,\n",
     "        }\n",
     "\n",
-    "class BaseAgentOutputSchema(BaseAgentIO):\n",
+    "class BaseAgentOutputSchema(BaseIOSchema):\n",
     "    chat_message: str = Field(\n",
     "        ...,\n",
     "        description='The chat message exchanged between the user and the chat agent. '\n",
@@ -345,7 +345,7 @@
    "metadata": {},
    "source": [
     "In the code above, you can see that the `BaseAgentInputSchema` and `BaseAgentOutputSchema` both:\n",
-    "- Extend from `BaseAgentIO`\n",
+    "- Extend from `BaseIOSchema`\n",
     "- Have a `chat_message` field with a `description` property \n",
     "- Have a Config class with a `title`, `description`, and `json_schema_extra` property.\n",
     "\n",
@@ -433,7 +433,7 @@
     "    THREE = \"3\"\n",
     "    FOUR = \"4\"\n",
     "\n",
-    "class YelpSearchToolSchema(BaseAgentIO):\n",
+    "class YelpSearchToolSchema(BaseIOSchema):\n",
     "    location: str = Field(..., description=\"Location to search for food.\")\n",
     "    term: Optional[str] = Field(None, description=\"Search term (e.g., 'pizza', 'sushi').\")\n",
     "    categories: Optional[List[YelpCategory]] = Field(None, description=\"Categories to filter by (e.g., 'italian, mexican').\")\n",
@@ -475,7 +475,7 @@
    "source": [
     "import json\n",
     "from pydantic import Field, create_model\n",
-    "from atomic_agents.agents.base_agent import BaseAgentIO, BaseAgent, BaseAgentConfig\n",
+    "from atomic_agents.agents.base_agent import BaseIOSchema, BaseAgent, BaseAgentConfig\n",
     "from atomic_agents.lib.components.system_prompt_generator import SystemPromptGenerator, SystemPromptInfo\n",
     "from atomic_agents.lib.tools.base import BaseTool\n",
     "from atomic_agents.lib.utils.format_tool_message import format_tool_message\n",
@@ -484,7 +484,7 @@
     "    tool_instance: BaseTool\n",
     "    return_raw_output: bool = False\n",
     "\n",
-    "class ToolInputModel(BaseAgentIO):\n",
+    "class ToolInputModel(BaseIOSchema):\n",
     "    tool_input: str = Field(..., description=\"Tool input. Presented as a single question or instruction\")\n",
     "\n",
     "    class Config:\n",
