--- a/examples/notebooks/what_is_atomic_agents.ipynb
+++ b/examples/notebooks/what_is_atomic_agents.ipynb
@@ -477,7 +477,7 @@
     "from pydantic import Field, create_model\n",
     "from atomic_agents.agents.base_agent import BaseIOSchema, BaseAgent, BaseAgentConfig\n",
     "from atomic_agents.lib.components.system_prompt_generator import SystemPromptGenerator, SystemPromptInfo\n",
-    "from atomic_agents.lib.tools.base import BaseTool\n",
+    "from atomic_agents.lib.tools.base_tool import BaseTool\n",
     "from atomic_agents.lib.utils.format_tool_message import format_tool_message\n",
     "\n",
     "class ToolInterfaceAgentConfig(BaseAgentConfig):\n",
