Make schema naming more consistent

--- a/examples/notebooks/multi_agent_quickstart.ipynb
+++ b/examples/notebooks/multi_agent_quickstart.ipynb
@@ -67,7 +67,7 @@
         "from rich.console import Console\n",
         "from atomic_agents.agents.base_agent import BaseIOSchema, BaseAgent, BaseAgentConfig\n",
         "from atomic_agents.agents.tool_interface_agent import ToolInterfaceAgent, ToolInterfaceAgentConfig\n",
-        "from atomic_agents.lib.tools.search.searx_tool import SearxNGSearchTool, SearxNGSearchToolConfig\n",
+        "from atomic_agents.lib.tools.search.searx_tool import SearxNGTool, SearxNGToolConfig\n",
         "from atomic_agents.lib.tools.calculator_tool import CalculatorTool, CalculatorToolConfig"
       ]
     },
@@ -93,7 +93,7 @@
         "client = instructor.from_openai(openai.OpenAI())\n",
         "\n",
         "# Initialize the SearxNG search tool\n",
-        "searx_tool = SearxNGSearchTool(SearxNGSearchToolConfig(base_url=os.getenv('SEARXNG_BASE_URL'), max_results=10))\n",
+        "searx_tool = SearxNGTool(SearxNGToolConfig(base_url=os.getenv('SEARXNG_BASE_URL'), max_results=10))\n",
         "\n",
         "# Initialize the calculator tool\n",
         "calc_tool = CalculatorTool(CalculatorToolConfig())"
