--- a/examples/notebooks/what_is_atomic_agents.ipynb
+++ b/examples/notebooks/what_is_atomic_agents.ipynb
@@ -433,7 +433,7 @@
     "    THREE = \"3\"\n",
     "    FOUR = \"4\"\n",
     "\n",
-    "class YelpSearchToolSchema(BaseIOSchema):\n",
+    "class YelpSearchToolInputSchema(BaseIOSchema):\n",
     "    location: str = Field(..., description=\"Location to search for food.\")\n",
     "    term: Optional[str] = Field(None, description=\"Search term (e.g., 'pizza', 'sushi').\")\n",
     "    categories: Optional[List[YelpCategory]] = Field(None, description=\"Categories to filter by (e.g., 'italian, mexican').\")\n",
@@ -603,19 +603,19 @@
     "from rich.console import Console\n",
     "\n",
     "from atomic_agents.agents.tool_interface_agent import ToolInterfaceAgent, ToolInterfaceAgentConfig\n",
-    "from atomic_agents.lib.tools.search.searx_tool import SearxNGSearchTool, SearxNGSearchToolConfig\n",
+    "from atomic_agents.lib.tools.search.searx_tool import SearxNGTool, SearxNGToolConfig\n",
     "\n",
     "def initialize_searx_tool():\n",
     "    \"\"\"\n",
-    "    Initialize the SearxNGSearchTool with configuration.\n",
+    "    Initialize the SearxNGTool with configuration.\n",
     "    \"\"\"\n",
     "    base_url = os.getenv('SEARXNG_BASE_URL')\n",
-    "    config = SearxNGSearchToolConfig(base_url=base_url, max_results=10)\n",
-    "    return SearxNGSearchTool(config)\n",
+    "    config = SearxNGToolConfig(base_url=base_url, max_results=10)\n",
+    "    return SearxNGTool(config)\n",
     "\n",
     "def initialize_agent(client, searx_tool):\n",
     "    \"\"\"\n",
-    "    Initialize the ToolInterfaceAgent with the given client and SearxNGSearchTool.\n",
+    "    Initialize the ToolInterfaceAgent with the given client and SearxNGTool.\n",
     "    \"\"\"\n",
     "    agent_config = ToolInterfaceAgentConfig(\n",
     "        client=client,\n",
@@ -635,7 +635,7 @@
     "    searx_tool = initialize_searx_tool()\n",
     "    agent = initialize_agent(client, searx_tool)\n",
     "\n",
-    "    console.print(\"ToolInterfaceAgent with SearxNGSearchTool is ready.\")\n",
+    "    console.print(\"ToolInterfaceAgent with SearxNGTool is ready.\")\n",
     "\n",
     "    while True:\n",
     "        user_input = input('You: ')\n",
