--- a/examples/notebooks/yelp_agent.ipynb
+++ b/examples/notebooks/yelp_agent.ipynb
@@ -70,7 +70,7 @@
     "from atomic_agents.lib.components.agent_memory import AgentMemory\n",
     "from atomic_agents.lib.components.system_prompt_generator import SystemPromptGenerator, SystemPromptInfo\n",
     "from atomic_agents.agents.base_agent import BaseAgent, BaseAgentOutputSchema, BaseAgentConfig\n",
-    "from atomic_agents.lib.tools.yelp_restaurant_finder_tool import YelpSearchTool, YelpSearchToolConfig, YelpSearchToolSchema"
+    "from atomic_agents.lib.tools.yelp_restaurant_finder_tool import YelpSearchTool, YelpSearchToolConfig, YelpSearchToolInputSchema"
    ]
   },
   {
@@ -194,7 +194,7 @@
    "source": [
     "# Define a custom response schema that can handle both chat responses and Yelp search tool responses\n",
     "class ResponseSchema(BaseModel):\n",
-    "    chosen_schema: Union[BaseAgentOutputSchema, YelpSearchToolSchema] = Field(..., description='The response from the chat agent.')\n",
+    "    chosen_schema: Union[BaseAgentOutputSchema, YelpSearchToolInputSchema] = Field(..., description='The response from the chat agent.')\n",
     "\n",
     "    class Config:\n",
     "        title = 'OutputSchema'\n",
@@ -260,7 +260,7 @@
     "    response = agent.run(agent.input_schema(chat_message=user_input).model_dump())\n",
     "    \n",
     "    # Check the type of the response schema\n",
-    "    if isinstance(response.chosen_schema, YelpSearchToolSchema):\n",
+    "    if isinstance(response.chosen_schema, YelpSearchToolInputSchema):\n",
     "        output = yelp_tool.run(response.chosen_schema)\n",
     "        agent.memory.add_message('system', f'The following information was found: {output.results}\\n\\n Please summarize the results for the user.')\n",
     "        output = agent.run().chosen_schema.chat_message\n",
