More renaming & consistency

--- a/examples/notebooks/what_is_atomic_agents.ipynb
+++ b/examples/notebooks/what_is_atomic_agents.ipynb
@@ -603,9 +603,9 @@
     "from rich.console import Console\n",
     "\n",
     "from atomic_agents.agents.tool_interface_agent import ToolInterfaceAgent, ToolInterfaceAgentConfig\n",
-    "from atomic_agents.lib.tools.search.searx_tool import SearxNGTool, SearxNGToolConfig\n",
+    "from atomic_agents.lib.tools.search.searxng_tool import SearxNGTool, SearxNGToolConfig\n",
     "\n",
-    "def initialize_searx_tool():\n",
+    "def initialize_searxng_tool():\n",
     "    \"\"\"\n",
     "    Initialize the SearxNGTool with configuration.\n",
     "    \"\"\"\n",
@@ -613,14 +613,14 @@
     "    config = SearxNGToolConfig(base_url=base_url, max_results=10)\n",
     "    return SearxNGTool(config)\n",
     "\n",
-    "def initialize_agent(client, searx_tool):\n",
+    "def initialize_agent(client, searxng_tool):\n",
     "    \"\"\"\n",
     "    Initialize the ToolInterfaceAgent with the given client and SearxNGTool.\n",
     "    \"\"\"\n",
     "    agent_config = ToolInterfaceAgentConfig(\n",
     "        client=client,\n",
     "        model='gpt-3.5-turbo',\n",
-    "        tool_instance=searx_tool,\n",
+    "        tool_instance=searxng_tool,\n",
     "        return_raw_output=False\n",
     "    )\n",
     "    return ToolInterfaceAgent(config=agent_config)\n",
@@ -632,8 +632,8 @@
     "            base_url='http://localhost:1234/v1'\n",
     "        )\n",
     "    )\n",
-    "    searx_tool = initialize_searx_tool()\n",
-    "    agent = initialize_agent(client, searx_tool)\n",
+    "    searxng_tool = initialize_searxng_tool()\n",
+    "    agent = initialize_agent(client, searxng_tool)\n",
     "\n",
     "    console.print(\"ToolInterfaceAgent with SearxNGTool is ready.\")\n",
     "\n",
