Get rid of SystemPromptInfo in examples

--- a/examples/notebooks/what_is_atomic_agents.ipynb
+++ b/examples/notebooks/what_is_atomic_agents.ipynb
@@ -90,7 +90,7 @@
     "Next, we will import the necessary components for creating the chatbot. Each component serves a specific purpose:\n",
     "- `AgentMemory`: Manages the chat history.\n",
     "- `BaseAgent`: The base class to create a custom chatbot. Can be extended for additional functionality if needed.\n",
-    "- `SystemPromptGenerator` and `SystemPromptInfo`: To define and generate system prompts."
+    "- `SystemPromptGenerator`: To define and generate system prompts."
    ]
   },
   {
@@ -100,7 +100,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from atomic_agents.lib.components.system_prompt_generator import SystemPromptGenerator, SystemPromptInfo"
+    "from atomic_agents.lib.components.system_prompt_generator import SystemPromptGenerator"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "source": [
     "from rich.console import Console\n",
     "\n",
-    "system_prompt = SystemPromptInfo(\n",
+    "system_prompt_generator = SystemPromptGenerator(\n",
     "    background=[\n",
     "        'This assistant is a general-purpose AI designed to be helpful and friendly.',\n",
     "    ],\n",
@@ -134,7 +134,6 @@
     "        'Always answer in rhyming verse.'\n",
     "    ]\n",
     ")\n",
-    "system_prompt_generator = SystemPromptGenerator(system_prompt)\n",
     "\n",
     "Console().print(system_prompt_generator.generate_prompt())"
    ]
@@ -538,23 +537,22 @@
     "            self.output_schema = self.tool_instance.output_schema\n",
     "            \n",
     "        self.system_prompt_generator = SystemPromptGenerator(\n",
-    "            system_prompt_info=SystemPromptInfo(\n",
-    "                background=[\n",
-    "                    f\"This AI agent is designed to interact with the {self.tool_instance.tool_name} tool.\",\n",
-    "                    f\"Tool description: {self.tool_instance.tool_description}\"\n",
-    "                ],\n",
-    "                steps=[\n",
-    "                    \"Get the user input.\",\n",
-    "                    \"Convert the input to the proper parameters to call the tool.\",\n",
-    "                    \"Call the tool with the parameters.\",\n",
-    "                    \"Respond to the user\"\n",
-    "                ],\n",
-    "                output_instructions=[\n",
-    "                    \"Make sure the tool call will maximize the utility of the tool in the context of the user input.\",\n",
-    "                    \"Process the output of the tool into a human readable format and/or use it to respond to the user input.\" if self.return_raw_output else \"Return the raw output of the tool.\"\n",
-    "                ]\n",
-    "            )\n",
+    "            background=[\n",
+    "                f\"This AI agent is designed to interact with the {self.tool_instance.tool_name} tool.\",\n",
+    "                f\"Tool description: {self.tool_instance.tool_description}\"\n",
+    "            ],\n",
+    "            steps=[\n",
+    "                \"Get the user input.\",\n",
+    "                \"Convert the input to the proper parameters to call the tool.\",\n",
+    "                \"Call the tool with the parameters.\",\n",
+    "                \"Respond to the user\"\n",
+    "            ],\n",
+    "            output_instructions=[\n",
+    "                \"Make sure the tool call will maximize the utility of the tool in the context of the user input.\",\n",
+    "                \"Process the output of the tool into a human readable format and/or use it to respond to the user input.\" if self.return_raw_output else \"Return the raw output of the tool.\"\n",
+    "            ]\n",
     "        )\n",
+    "        \n",
     "        \n",
     "    def _get_and_handle_response(self):\n",
     "        \"\"\"\n",
