--- a/examples/notebooks/youtube_knowledge_extraction.ipynb
+++ b/examples/notebooks/youtube_knowledge_extraction.ipynb
@@ -101,8 +101,8 @@
     "from typing import List, Optional\n",
     "\n",
     "from atomic_agents.agents.base_agent import BaseAgent, BaseAgentConfig\n",
-    "from atomic_agents.lib.components.system_prompt_generator import SystemPromptContextProviderBase, SystemPromptGenerator, SystemPromptInfo\n",
-    "from atomic_agents.lib.tools.yt_transcript_scraper import YouTubeTranscriptTool, YouTubeTranscriptToolConfig, YouTubeTranscriptToolInputSchema"
+    "from atomic_agents.lib.components.system_prompt_generator import SystemPromptContextProviderBase, SystemPromptGenerator\n",
+    "from atomic_agents.lib.tools.yt_transcript_scraper_tool import YouTubeTranscriptTool, YouTubeTranscriptToolConfig, YouTubeTranscriptToolInputSchema"
    ]
   },
   {
@@ -151,8 +151,7 @@
     "        return f'VIDEO TRANSCRIPT: \"{self.transcript}\"\\n\\nDURATION: {self.duration}\\n\\nMETADATA: {self.metadata}'\n",
     "        \n",
     "transcript_provider = YtTranscriptProvider(title='YouTube Transcript')\n",
-    "\n",
-    "system_prompt_info = SystemPromptInfo(\n",
+    "system_prompt_generator = SystemPromptGenerator(\n",
     "    background=[\n",
     "        'This Assistant is an expert at extracting knowledge and other insightful and interesting information from YouTube transcripts.'\n",
     "    ],\n",
@@ -213,7 +212,7 @@
     "agent = BaseAgent(\n",
     "    config=BaseAgentConfig(\n",
     "        client=client,\n",
-    "        system_prompt_generator=SystemPromptGenerator(system_prompt_info),\n",
+    "        system_prompt_generator=system_prompt_generator,\n",
     "        model='gpt-3.5-turbo',\n",
     "        output_schema=ResponseModel\n",
     "    )\n",
