--- a/examples/notebooks/yelp_agent.ipynb
+++ b/examples/notebooks/yelp_agent.ipynb
@@ -68,7 +68,7 @@
     "from rich.console import Console\n",
     "\n",
     "from atomic_agents.lib.components.agent_memory import AgentMemory\n",
-    "from atomic_agents.lib.components.system_prompt_generator import SystemPromptGenerator, SystemPromptInfo\n",
+    "from atomic_agents.lib.components.system_prompt_generator import SystemPromptGenerator\n",
     "from atomic_agents.agents.base_agent import BaseAgent, BaseAgentOutputSchema, BaseAgentConfig\n",
     "from atomic_agents.lib.tools.yelp_restaurant_finder_tool import YelpSearchTool, YelpSearchToolConfig, YelpSearchToolInputSchema"
    ]
@@ -88,8 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define system prompt information including background, steps, and output instructions\n",
-    "system_prompt = SystemPromptInfo(\n",
+    "# Initialize the system prompt generator with the defined system prompt and dynamic info providers\n",
+    "system_prompt_generator = SystemPromptGenerator(\n",
     "    background=[\n",
     "        'This assistant is a restaurant finder AI designed to help users find the best restaurants based on their preferences by asking clarifying questions.',\n",
     "    ],\n",
@@ -124,9 +124,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize the system prompt generator with the defined system prompt and dynamic info providers\n",
-    "system_prompt_generator = SystemPromptGenerator(system_prompt)\n",
-    "\n",
     "# Initialize chat memory to store conversation history\n",
     "memory = AgentMemory()\n",
     "# Define initial memory with a greeting message from the assistant\n",
@@ -227,7 +224,7 @@
     "        system_prompt_generator=system_prompt_generator,\n",
     "        model='gpt-3.5-turbo',\n",
     "        memory=memory,\n",
-    "        output_schema=OutputSchema\n",
+    "        output_schema=ResponseSchema\n",
     "    )\n",
     ")\n",
     "\n",
