Use gpt-4o-mini in openai examples

--- a/examples/notebooks/quickstart.ipynb
+++ b/examples/notebooks/quickstart.ipynb
@@ -161,7 +161,7 @@
     "    config=BaseAgentConfig(\n",
     "        client=client,\n",
     "        system_prompt_generator=system_prompt_generator,\n",
-    "        model='gpt-3.5-turbo',\n",
+    "        model='gpt-4o-mini',\n",
     "        memory=memory,\n",
     "    )\n",
     ")"
