--- a/examples/notebooks/youtube_knowledge_extraction.ipynb
+++ b/examples/notebooks/youtube_knowledge_extraction.ipynb
@@ -213,7 +213,7 @@
     "    config=BaseAgentConfig(\n",
     "        client=client,\n",
     "        system_prompt_generator=system_prompt_generator,\n",
-    "        model='gpt-3.5-turbo',\n",
+    "        model='gpt-4o-mini',\n",
     "        output_schema=ResponseModel\n",
     "    )\n",
     ")"
