--- a/examples/notebooks/multi_agent_quickstart.ipynb
+++ b/examples/notebooks/multi_agent_quickstart.ipynb
@@ -115,10 +115,10 @@
       "outputs": [],
       "source": [
         "# Configure the search agent\n",
-        "search_agent_config = ToolInterfaceAgentConfig(client=client, model='gpt-3.5-turbo', tool_instance=searxng_tool, return_raw_output=False)\n",
+        "search_agent_config = ToolInterfaceAgentConfig(client=client, model='gpt-4o-mini', tool_instance=searxng_tool, return_raw_output=False)\n",
         "\n",
         "# Configure the calculator agent\n",
-        "calculator_agent_config = ToolInterfaceAgentConfig(client=client, model='gpt-3.5-turbo', tool_instance=calc_tool, return_raw_output=False)\n",
+        "calculator_agent_config = ToolInterfaceAgentConfig(client=client, model='gpt-4o-mini', tool_instance=calc_tool, return_raw_output=False)\n",
         "\n",
         "# Create the search agent and calculator agent\n",
         "searx_agent = ToolInterfaceAgent(config=search_agent_config)\n",
@@ -167,7 +167,7 @@
       "outputs": [],
       "source": [
         "# Create the orchestration agent\n",
-        "orchestration_agent = BaseAgent(config=BaseAgentConfig(client=client, model='gpt-3.5-turbo', output_schema=UnionResponse))"
+        "orchestration_agent = BaseAgent(config=BaseAgentConfig(client=client, model='gpt-4o-mini', output_schema=UnionResponse))"
       ]
     },
     {
