--- a/examples/notebooks/what_is_atomic_agents.ipynb
+++ b/examples/notebooks/what_is_atomic_agents.ipynb
@@ -234,7 +234,7 @@
     "    config=BaseAgentConfig(\n",
     "        client=client,\n",
     "        system_prompt_generator=system_prompt_generator,\n",
-    "        model='gpt-3.5-turbo',\n",
+    "        model='gpt-4o-mini',\n",
     "        memory=memory,\n",
     "    )\n",
     ")\n",
@@ -617,7 +617,7 @@
     "    \"\"\"\n",
     "    agent_config = ToolInterfaceAgentConfig(\n",
     "        client=client,\n",
-    "        model='gpt-3.5-turbo',\n",
+    "        model='gpt-4o-mini',\n",
     "        tool_instance=searxng_tool,\n",
     "        return_raw_output=False\n",
     "    )\n",
