--- a/examples/notebooks/yelp_agent.ipynb
+++ b/examples/notebooks/yelp_agent.ipynb
@@ -222,7 +222,7 @@
     "    config=BaseAgentConfig(\n",
     "        client=client, \n",
     "        system_prompt_generator=system_prompt_generator,\n",
-    "        model='gpt-3.5-turbo',\n",
+    "        model='gpt-4o-mini',\n",
     "        memory=memory,\n",
     "        output_schema=ResponseSchema\n",
     "    )\n",
