Get rid of the Config class boilerplate and use docstrings and the classname instead

--- a/examples/notebooks/yelp_agent.ipynb
+++ b/examples/notebooks/yelp_agent.ipynb
@@ -191,15 +191,9 @@
    "source": [
     "# Define a custom response schema that can handle both chat responses and Yelp search tool responses\n",
     "class ResponseSchema(BaseModel):\n",
-    "    chosen_schema: Union[BaseAgentOutputSchema, YelpSearchToolInputSchema] = Field(..., description='The response from the chat agent.')\n",
-    "\n",
-    "    class Config:\n",
-    "        title = 'OutputSchema'\n",
-    "        description = 'The response schema for the chat agent.'\n",
-    "        json_schema_extra = {\n",
-    "            'title': title,\n",
-    "            'description': description,\n",
-    "        }"
+    "    \"\"\"The response schema for the chat agent. The output will either be a chat response, or an API call to the yelp search tool.\"\"\"\n",
+    "    \n",
+    "    chosen_schema: Union[BaseAgentOutputSchema, YelpSearchToolInputSchema] = Field(..., description='The response from the chat agent.')"
    ]
   },
   {
